--- a/.github/workflows/exercise.yml
+++ b/.github/workflows/exercise.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Install NPM dependencies
+        run: npm ci
       - name: Run Lint
         run: npm run lint
       - name: Run Test
