Dependencies step added in deployment job too

--- a/.github/workflows/exercise.yml
+++ b/.github/workflows/exercise.yml
@@ -26,6 +26,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Install NPM dependencies
+        run: npm ci
       - name: Deployment
         run: npm run build
 
